--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^10.15.1",
     "lucide-react": "^0.263.0",
     "next": "13.4.12",
     "next-themes": "^0.2.1",
