--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.45.0",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.263.0",
     "next": "13.4.12",
     "next-themes": "^0.2.1",
+    "popmotion": "^11.0.5",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
