--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.1",
     "lucide-react": "^0.263.0",
-    "next": "13.4.12",
+    "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "popmotion": "^11.0.5",
-    "postcss": "8.4.27",
+    "postcss": "^8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
