--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,23 @@
+<IfModule mod_rewrite.c>
+
+    RewriteEngine On
+    RewriteCond %{HTTPS} off
+    RewriteCond %{REQUEST_URI} ^.$
+    RewriteRule ^(.*)$ https://"auto-auron.hr"/ [NC,L,R=301]
+
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-l
+    RewriteCond %{HTTPS} off
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [NC,L,R=301]
+
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-l
+    RewriteCond %{HTTPS} on
+    RewriteRule ^(.*)$ /index.html [NC,L,QSA]
+
+</IfModule>
 
 
 # php -- BEGIN cPanel-generated handler, do not edit
