--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,9 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "dist/types/**/*.ts"
+    "dist/types/**/*.ts",
+    "distnew/types/**/*.ts",
+    "distn/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
