--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@next/third-parties": "^14.1.0",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -24,7 +25,7 @@
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.1",
     "lucide-react": "^0.263.0",
-    "next": "^13.5.6",
+    "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "popmotion": "^11.0.5",
     "postcss": "^8.4.32",
